fixed centering issue on full bleed header title for mobile

--- a/_sass/_styles.scss
+++ b/_sass/_styles.scss
@@ -3,6 +3,7 @@
   max-height:500px;
   min-height:400px;
   background-size:cover;
+  text-align: center;
   h1 {margin-top:100px;}
 }
 
