--- a/css/i.css
+++ b/css/i.css
@@ -840,7 +840,8 @@ code {
   margin: 0;
   max-height: 500px;
   min-height: 400px;
-  background-size: cover; }
+  background-size: cover;
+  text-align: center; }
   .header-full-bleed h1 {
     margin-top: 100px; }
 
